test/negative/tuple_assign_wrong.mut
# ERROR: assign non-tuple to tuple-typed variable
t: (i64, str) = 42
